--- a/productos.html
+++ b/productos.html
@@ -208,7 +208,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/ensalada-tpmate.jpg" alt="">
+														<img class="img-responsive" src="img/ensalada-tpmate.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -243,7 +243,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/ensalada.jpg" alt="">
+														<img class="img-responsive" src="img/ensalada.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -278,7 +278,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/espaguetti.jpg" alt="">
+														<img class="img-responsive" src="img/espaguetti.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -313,7 +313,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/garbanzos.jpg" alt="">
+														<img class="img-responsive" src="img/garbanzos.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -348,7 +348,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/tomate-aguacate.jpg" alt="">
+														<img class="img-responsive" src="img/tomate-aguacate.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
@@ -383,7 +383,7 @@
 												<!-- imagen destacado -->
 												<div class="card-item-img square">
 													<div class="content">
-														<img src="img/tostadas.jpg" alt="">
+														<img class="img-responsive" src="img/tostadas.jpg" alt="">
 													</div>
 												</div>
 												<!-- FIN imagen destacado -->
