empezamos con javascript

--- a/carrito.html
+++ b/carrito.html
@@ -196,7 +196,7 @@
                                 <div class="row select-amount">
                                     <div class="col-4 add-substract">
                                         <button class="decrement">-</button>
-                                        <input type="text" value="3">
+                                        <input class="amount" type="text" value="3">
                                         <button class="increment">+</button>
                                     </div>
                                 </div>
@@ -227,7 +227,7 @@
                                 <div class="row select-amount">
                                     <div class="col-4 add-substract">
                                         <button class="decrement">-</button>
-                                        <input type="text" value="3">
+                                        <input class="amount" type="text" value="3">
                                         <button class="increment">+</button>
                                     </div>
                                 </div>
@@ -258,7 +258,7 @@
                                 <div class="row select-amount">
                                     <div class="col-4 add-substract">
                                         <button class="decrement">-</button>
-                                        <input type="text" value="3">
+                                        <input class="amount" type="text" value="3">
                                         <button class="increment">+</button>
                                     </div>
                                 </div>
@@ -289,7 +289,7 @@
                                 <div class="row select-amount">
                                     <div class="col-4 add-substract">
                                         <button class="decrement">-</button>
-                                        <input type="text" value="3">
+                                        <input class="amount" type="text" value="3">
                                         <button class="increment">+</button>
                                     </div>
                                 </div>
@@ -366,6 +366,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+            <script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
