--- a/producto.html
+++ b/producto.html
@@ -215,14 +215,40 @@
 									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sapiente dolor iure. Fugiat nihil amet maxime officiis eum! Voluptate consequuntur alias atque minus! Blanditiis eveniet, accusamus assumenda voluptatem, dolorem esse cupiditate dolorum unde ducimus, fugit similique. Dolore facilis voluptate tempora illo quo saepe mollitia voluptatibus nulla inventore? Perspiciatis nihil dolorem distinctio.</p>								
 								</div>
 								<div class="row select-amount mt-5">
-
-									<div class="col-5 add-substract">
-										<span class="align-self-center me-2">Cantidad</span>
+									<div class="col-4 add-substract">
 										<button class="decrement">-</button>
-										<input type="text" value="3">
+										<input class="amount" type="text" disabled value="3">
 										<button class="increment">+</button>
 									</div>
+
 								</div>
+								<div class="row product-features-tabs pt-4">
+									<div class="col-12">
+										<div>
+											<div class="item d-inline-block active" data-content="item1">
+												Feature 1
+											</div>
+											<div class="item d-inline-block" data-content="item2">
+												Feature 2
+											</div>
+											<div class="item d-inline-block" data-content="item3">
+												Feature 3
+											</div>
+										</div>
+										<div>
+											<div class="item-content active" data-content="item1">
+												Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus, deleniti quam? Perferendis ad reprehenderit obcaecati? Dignissimos est placeat minus deleniti sed corporis atque incidunt nulla vero obcaecati sunt inventore, ab enim? Perferendis sed sit pariatur mollitia tempore minima nihil dolorum aut molestias fugit repellendus, porro, hic doloribus architecto iusto recusandae.
+											</div>
+											<div class="item-content" data-content="item2">
+												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis illum ut omnis consectetur tempora? Voluptatibus!
+											</div>
+											<div class="item-content" data-content="item3">
+												Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
+											</div>
+										</div>
+									</div>
+								<div>
+							</div>
 								<div class="cta">
 									<button class="btn btn-principal comprar mt-5">
 										COMPRAR
@@ -242,6 +268,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+			<script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
