--- a/contacto.html
+++ b/contacto.html
@@ -213,19 +213,21 @@
 									<label for="telefono">Telefono</label>
 									<input id="telefono"  class="mt-1" type="text">
 								</div>
-								<div class="col-6">
+								<div class="col-6 pos-relative">
 									<label for="email">Email</label>
-									<input id="email" class="mt-1" type="text">
+									<input id="email" class="validate mt-1" type="text" data-validate="email">
+									<p class="error-message">El email no tiene el formato correcto</p>
 								</div>
-								<div class="col-12">
+								<div class="col-12 textareas">
 									<label for="mensaje" class="mb-2">Mensaje</label>
-									<textarea name="mensaje" id="mensaje" class="mt-1"></textarea>
+									<span class="counter-text"><span class="counter-num">0</span><span>/250</span></span>
+									<textarea name="mensaje" id="mensaje" class="mt-1" data-validation="mensaje" maxlength="250"></textarea>
 								</div>
 							</div>
 							<!-- FIN info + formulario -->
 							<!-- info boton -->
 							<div>
-								<button class="btn btn-sm btn-principal comprar mt-3">
+								<button id="submitForm" class="btn btn-sm btn-principal comprar mt-3">
 									ENVIAR
 								</button>
 								<button class="btn btn-sm btn-secondary comprar mt-3">
@@ -247,6 +249,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+			<script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
