--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+			<script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
