--- a/productos.html
+++ b/productos.html
@@ -426,6 +426,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+			<script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
