Resumen de compra (en proceso)

--- a/contacto.html
+++ b/contacto.html
@@ -224,7 +224,7 @@
 								<div class="col-12 textareas pos-relative">
 									<label for="mensaje" class="mb-2">Mensaje</label>
 									<span class="counter-text"><span class="counter-num">0</span><span>/250</span></span>
-									<textarea name="mensaje" id="mensaje" class="validate mt-1" data-validate="" maxlength="250"></textarea>
+									<textarea name="mensaje" id="mensaje" class="mt-1" maxlength="250"></textarea>
 									<p class="error-message"></p>
 								</div>
 							</div>
