--- a/producto.html
+++ b/producto.html
@@ -158,7 +158,7 @@
 									<div class="col">
 										<div class="slider-gallery-img square">
 											<div class="content">
-												<img class="img-responsive" src="img/ensalada-tpmate.jpg" alt="">
+												<img class="img-responsive main-img" src="img/ensalada.jpg" alt="">
 											</div>
 										</div>
 									</div>
@@ -167,35 +167,35 @@
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/ensalada.jpg" alt="">
+												<img class="img-responsive shadow img-thumbnail" src="img/ensalada.jpg" alt="" data-image="img/ensalada.jpg">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/espaguetti.jpg" alt="">
+												<img class="img-responsive shadow img-thumbnail" src="img/espaguetti.jpg" alt="" data-image="img/espaguetti.jpg">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/garbanzos.jpg" alt="">
+												<img class="img-responsive shadow img-thumbnail" src="img/garbanzos.jpg" alt="" data-image="img/garbanzos.jpg">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/tomate-aguacate.jpg" alt="">
+												<img class="img-responsive shadow img-thumbnail" src="img/tomate-aguacate.jpg" alt="" data-image="img/tomate-aguacate.jpg">
 											</div>
 										</div>
 									</li>
 									<li class="col">
 										<div class="square">
 											<div class="content">
-												<img class="img-responsive shadow" src="img/tostadas.jpg" alt="">
+												<img class="img-responsive shadow img-thumbnail" src="img/tostadas.jpg" alt="" data-image="img/tostadas.jpg">
 											</div>
 										</div>
 									</li>
