--- a/checkout.html
+++ b/checkout.html
@@ -160,25 +160,30 @@
                     <div class="row contact mt-5">
                         <div class="col-6">
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-6 pos-relative">
                                     <label for="nombre">Nombre</label>
-                                    <input id="nombre"  class="mt-1"  type="text">
+                                    <input id="nombre"  class="validate mt-1"  type="text" data-validate="names">
+									<p class="error-message">Formato incorrecto</p>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-6 pos-relative">
                                     <label for="apellidos">Apellidos</label>
-                                    <input id="apellidos" class="mt-1"   type="text">
+                                    <input id="apellidos" class="validate mt-1"   type="text" data-validate="names">
+									<p class="error-message">Formato incorrecto</p>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-6 pos-relative">
                                     <label for="telefono">Telefono</label>
-                                    <input id="telefono"  class="mt-1" type="text">
+                                    <input id="telefono"  class="validate mt-1" type="text" data-validate="numbers">
+									<p class="error-message">Formato incorrecto</p>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-6 pos-relative">
                                     <label for="email">Email</label>
-                                    <input id="email" class="mt-1" type="text">
+                                    <input id="email" class="validate mt-1" type="text" data-validate="emails">
+									<p class="error-message">Formato incorrecto</p>
                                 </div>
-                                <div class="col-12">
+                                <div class="col-12 pos-relative">
                                     <label for="mensaje" class="mb-2">Mensaje</label>
-                                    <textarea name="mensaje" id="mensaje" class="mt-1"></textarea>
+									<span class="counter-text"><span class="counter-num">0</span><span>/250</span></span>
+                                    <textarea name="mensaje" id="mensaje" class="mt-1" maxlength="250"></textarea>
                                 </div>
                             </div>
                             <!-- FIN info + formulario -->
@@ -250,7 +255,7 @@
                                       <button class="btn btn-sm btn-secondary comprar mt-3">
                                           VOLVER
                                       </button>
-                                      <button class="btn btn-sm btn-principal comprar mt-3">
+                                      <button id="submitForm" class="btn btn-sm btn-principal comprar mt-3">
                                           COMPRAR
                                       </button>
                                     </div>
@@ -271,6 +276,7 @@
 				<p><a href="#">Ves a donde quieras</a></p>
 			</footer>
 			<!-- FIN footer -->
+			<script type="module" src="js/index.js"></script>
 		</body>
 	
 	</html>
