panel de administrador

--- a/checkout.html
+++ b/checkout.html
@@ -162,22 +162,22 @@
                             <div class="row">
                                 <div class="col-6 pos-relative">
                                     <label for="nombre">Nombre</label>
-                                    <input id="nombre"  class="validate mt-1"  type="text" data-validate="names">
+                                    <input id="nombre"  class="mt-1"  type="text" data-validate="names">
 									<p class="error-message">Formato incorrecto</p>
                                 </div>
                                 <div class="col-6 pos-relative">
                                     <label for="apellidos">Apellidos</label>
-                                    <input id="apellidos" class="validate mt-1"   type="text" data-validate="names">
+                                    <input id="apellidos" class="mt-1"   type="text" data-validate="names">
 									<p class="error-message">Formato incorrecto</p>
                                 </div>
                                 <div class="col-6 pos-relative">
                                     <label for="telefono">Telefono</label>
-                                    <input id="telefono"  class="validate mt-1" type="text" data-validate="numbers">
+                                    <input id="telefono"  class="mt-1" type="text" data-validate="numbers">
 									<p class="error-message">Formato incorrecto</p>
                                 </div>
                                 <div class="col-6 pos-relative">
                                     <label for="email">Email</label>
-                                    <input id="email" class="validate mt-1" type="text" data-validate="emails">
+                                    <input id="email" class="mt-1" type="text" data-validate="emails">
 									<p class="error-message">Formato incorrecto</p>
                                 </div>
                                 <div class="col-12 pos-relative">
