--- a/admin-panel.html
+++ b/admin-panel.html
@@ -7,26 +7,25 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="shortcut icon" href="https://www.youtube.com/s/desktop/12d6b690/img/favicon.ico">
 	
-			<title>Título</title>
+			<title>Panel de administracion</title>
 			<meta name="description" content="descripción de la web, se recomienda 90 caracteres">
 			<meta name="keywords"    content="palabras clave, separadas, por comas">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-			<link href="assets/css/app.css" rel="stylesheet">
+			<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+			<link href="assets/css/admin.css" rel="stylesheet">
 		</head>
-	
-	   
+
+										
+
 		<body>
-			<!-- Header -->
-			<header class="px-4">
-				<div class="container-fluid">
-					<div class="row justify-content-between h-100">
-						<!-- Logotipo -->
-						<div class="col-2 header-logo">
-							<div class="row h-100 align-items-center">
-								<div class="col header-logo-img p-1">								
-									<svg version="1.1"
+			<div class="admin-panel">
+				<div class="sidebar-menu">
+					<div class="sidebar-header">
+						<div class="logo">
+							<a href="index.html">
+								<svg version="1.1"
 									id="svg2" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:ns1="http://sozi.baierouge.fr" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
 									xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1360.2 678.9"
 									style="enable-background:new 0 0 1360.2 678.9;" xml:space="preserve">
@@ -120,145 +119,73 @@
 									</g>
 									</g>
 									</svg>
-   
-								</div>
-								<!-- <div class="col header-logo-text">
-									<span>RESTAURANT</span>
-								</div> -->
-							</div>
+							</a>
 						</div>
-						<!-- FIN Logotipo -->
-						<!-- Menu de navegacion -->
-						<nav class="col-5 header-nav h-100">
-							<ul class="row align-items-center h-100">
-								<li class="col">
-									<a href="">Home</a>
+					</div>
+					<div class="sidebar-main">
+						<nav>
+							<ul class="menu">
+								<li class="active">
+									<a href="">Opcion 1 <span class="material-symbols-outlined">
+										expand_more
+										</span></a>
+									<ul class="submenu">
+										<li>
+											<a href="">Sub1-Opcion 1</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 1</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 1</a>
+										</li>
+									</ul>
 								</li>
-								<li class="col">
-									<a href="">Tienda</a>
+								<li><a href="">Opcion 2</a></li>
+								<li><a href="">Opcion 3</a></li>
+								<li><a href="">Opcion 4</a></li>
+								<li>
+									<a href="">Opcion 5 <span class="material-symbols-outlined">
+										expand_more
+										</span></a>
+									<ul class="submenu">
+										<li>
+											<a href="">Sub1-Opcion 5</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 5</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 5</a>
+										</li>
+									</ul>
 								</li>
-								<li class="col">
-									<a href="">Contacto</a>
+								<li>
+									<a href="">Opcion 6 <span class="material-symbols-outlined">
+										expand_more
+										</span></a>
+									<ul class="submenu">
+										<li>
+											<a href="">Sub1-Opcion 6</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 6</a>
+										</li>
+										<li>
+											<a href="">Sub1-Opcion 6</a>
+										</li>
+									</ul>
 								</li>
+								<li><a href="">Opcion 7</a></li>
+								<li><a href="">Opcion 8</a></li>
 							</ul>
 						</nav>
-						<!-- FIN Menu de navegacion -->
 					</div>
 				</div>
-			</header>
-			<!-- FIN Header -->
-			<!-- Main -->
-			<main>
-                <div class="container contact section">
-                    <!-- h1 -->
-                    <div class="row contact-title">
-                        <h1 class="col-12 text-align-center color-principal">Contacte con nosotros</h1>
-                    </div>
-                    <!-- info + formulario -->
-					<div class="row mt-5">
-						<!-- info -->
-                    	<div class="col-6 contact contact-info">
-							<div class="row flex-column">
-								<!-- info-item -->
-								<div class="col-12">
-									<p>
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.48 22.926l-1.193.658c-6.979 3.621-19.082-17.494-12.279-21.484l1.145-.637 3.714 6.467-1.139.632c-2.067 1.245 2.76 9.707 4.879 8.545l1.162-.642 3.711 6.461zm-9.808-22.926l-1.68.975 3.714 6.466 1.681-.975-3.715-6.466zm8.613 14.997l-1.68.975 3.714 6.467 1.681-.975-3.715-6.467z"/></svg>
-										<span>+34 971 234 567</span>
-									</p>
-								</div>
-								<!-- info-item -->
-								<div class="col-12">
-									<p>
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm21.518 2l-9.518 7.713-9.518-7.713h19.036zm-19.518 14v-11.817l10 8.104 10-8.104v11.817h-20z"/></svg>
-										<span>info@tupaginaweb</span>
-									</p>
-								</div>
-								<!-- info-item -->
-								<div class="col-12">
-									<p>
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2c2.131 0 4 1.73 4 3.702 0 2.05-1.714 4.941-4 8.561-2.286-3.62-4-6.511-4-8.561 0-1.972 1.869-3.702 4-3.702zm0-2c-3.148 0-6 2.553-6 5.702 0 3.148 2.602 6.907 6 12.298 3.398-5.391 6-9.15 6-12.298 0-3.149-2.851-5.702-6-5.702zm0 8c-1.105 0-2-.895-2-2s.895-2 2-2 2 .895 2 2-.895 2-2 2zm8 12c0 2.209-3.581 4-8 4s-8-1.791-8-4c0-1.602 1.888-2.98 4.608-3.619l1.154 1.824c-.401.068-.806.135-1.178.242-3.312.949-3.453 2.109-.021 3.102 2.088.603 4.777.605 6.874-.001 3.619-1.047 3.164-2.275-.268-3.167-.296-.077-.621-.118-.936-.171l1.156-1.828c2.723.638 4.611 2.016 4.611 3.618z"/></svg>
-										<span>Paseo Máritimo de Palma de Mallorca</span>
-									</p>
-								</div>
-								<!-- info-item -->
-								<div class="col-12">
-									<p>
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20 20h-4v-4h4v4zm-6-10h-4v4h4v-4zm6 0h-4v4h4v-4zm-12 6h-4v4h4v-4zm6 0h-4v4h4v-4zm-6-6h-4v4h4v-4zm16-8v22h-24v-22h3v1c0 1.103.897 2 2 2s2-.897 2-2v-1h10v1c0 1.103.897 2 2 2s2-.897 2-2v-1h3zm-2 6h-20v14h20v-14zm-2-7c0-.552-.447-1-1-1s-1 .448-1 1v2c0 .552.447 1 1 1s1-.448 1-1v-2zm-14 2c0 .552-.447 1-1 1s-1-.448-1-1v-2c0-.552.447-1 1-1s1 .448 1 1v2z"/></svg>
-										<span>Abierto todos los días</span>
-									</p>
-								</div>
-								<!-- info-item -->
-								<div class="col-12">
-									<p>
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm1 12v-6h-2v8h7v-2h-5z"/></svg>
-										<span>08:00 - 24:00</span>
-									</p>
-								</div>
-							</div>
-						</div>
-						<!-- FIN info -->
-
-                        <!-- Contacto form -->
-                        <form action="" class="col-6">
-							<div class="row">
-								<div class="col-6 pos-relative">
-									<label for="nombre">Nombre</label>
-									<input id="nombre"  class="mt-1"  type="text" data-validate="names">
-									<p class="error-message">Formato incorrecto</p>
-								</div>
-								<div class="col-6 pos-relative">
-									<label for="apellidos">Apellidos</label>
-									<input id="apellidos" class="mt-1"   type="text"  data-validate="names">
-									<p class="error-message">Formato incorrecto</p>
-								</div>
-								<div class="col-6 pos-relative">
-									<label for="telefono">Telefono</label>
-									<input id="telefono"  class="mt-1" type="text" data-validate="numbers">
-									<p class="error-message">Formato incorrecto</p>
-								</div>
-								<div class="col-6 pos-relative">
-									<label for="email">Email</label>
-									<input id="email" class="mt-1" type="text" data-validate="emails">
-									<p class="error-message">Formato incorrecto</p>
-								</div>
-								<div class="col-12 textareas pos-relative">
-									<label for="mensaje" class="mb-2">Mensaje</label>
-									<span class="counter-text"><span class="counter-num">0</span><span>/250</span></span>
-									<textarea name="mensaje" id="mensaje" class="mt-1" maxlength="250"></textarea>
-									<p class="error-message"></p>
-								</div>
-							</div>
-							<!-- FIN info + formulario -->
-							<!-- info boton -->
-							<div>
-								<button id="submitForm" class="btn btn-sm btn-principal comprar mt-3">
-									ENVIAR
-								</button>
-								<button class="btn btn-sm btn-secondary comprar mt-3">
-									CANCELAR
-								</button>
-							</div>
-							<!-- FIN info boton -->
-                        </form>
-						<!-- FIN Contacto form -->
-					</div>
-					<!-- FIN info + formulario -->
-                </div>
-            </div>
-
-			</main>
-			<div id="notification-wrapper" class="notification-wrapper">
-				<div id="notification" class="notification">
-					<img src="img/sobre.png" alt="">
-					<p id="notification-message"></p>
+				<div class="header">
+					<div class="search"></div>
 				</div>
 			</div>
-			<!-- FIN main -->
-			<!-- Footer -->
-			<footer>
-				<p>© 2022</p>
-				<p><a href="#">Ves a donde quieras</a></p>
-			</footer>
 			<!-- FIN footer -->
 			<script type="module" src="js/index.js"></script>
 		</body>
