--- a/admin-panel.html
+++ b/admin-panel.html
@@ -130,7 +130,7 @@
 									<a href="">Opcion 1 <span class="material-symbols-outlined">
 										expand_more
 										</span></a>
-									<ul class="submenu">
+									<ul class="submenu active">
 										<li>
 											<a href="">Sub1-Opcion 1</a>
 										</li>
@@ -205,8 +205,119 @@
 						</div>
 					</div>
 				</div>
-				<div class="main-content">
-					<h2>Datos de la empresa</h2>
+				<div class="main-content container-fluid">
+					<div class="row">
+						<div class="col">
+							<h2>Categorías</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4">
+							<ul class="items-list px-3">
+								<li class="item">
+									<p><span class="name">Nombre: </span>Sa Lloca loca S.L.</p>
+									<div class="options d-flex justify-content-end align-items-center">
+										<div class="trash" title="borrar">
+											<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M9 19c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5-17v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712zm-3 4v16h-14v-16h-2v18h18v-18h-2z"/></svg>
+										</div>
+										<div class="edit" title="editar">
+											<svg width="30" height="30" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m11.25 6c.398 0 .75.352.75.75 0 .414-.336.75-.75.75-1.505 0-7.75 0-7.75 0v12h17v-8.749c0-.414.336-.75.75-.75s.75.336.75.75v9.249c0 .621-.522 1-1 1h-18c-.48 0-1-.379-1-1v-13c0-.481.38-1 1-1zm1.521 9.689 9.012-9.012c.133-.133.217-.329.217-.532 0-.179-.065-.363-.218-.515l-2.423-2.415c-.143-.143-.333-.215-.522-.215s-.378.072-.523.215l-9.027 8.996c-.442 1.371-1.158 3.586-1.264 3.952-.126.433.198.834.572.834.41 0 .696-.099 4.176-1.308zm-2.258-2.392 1.17 1.171c-.704.232-1.274.418-1.729.566zm.968-1.154 7.356-7.331 1.347 1.342-7.346 7.347z" fill-rule="nonzero"/></svg>
+										</div>
+									</div>
+								</li>
+								<li class="item">
+									<p><span class="name">Nombre: </span>Sa Lloca loca S.L.</p>
+									<div class="options d-flex justify-content-end align-items-center">
+										<div class="trash" title="borrar">
+											<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M9 19c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5-17v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712zm-3 4v16h-14v-16h-2v18h18v-18h-2z"/></svg>
+										</div>
+										<div class="edit" title="editar">
+											<svg width="30" height="30" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m11.25 6c.398 0 .75.352.75.75 0 .414-.336.75-.75.75-1.505 0-7.75 0-7.75 0v12h17v-8.749c0-.414.336-.75.75-.75s.75.336.75.75v9.249c0 .621-.522 1-1 1h-18c-.48 0-1-.379-1-1v-13c0-.481.38-1 1-1zm1.521 9.689 9.012-9.012c.133-.133.217-.329.217-.532 0-.179-.065-.363-.218-.515l-2.423-2.415c-.143-.143-.333-.215-.522-.215s-.378.072-.523.215l-9.027 8.996c-.442 1.371-1.158 3.586-1.264 3.952-.126.433.198.834.572.834.41 0 .696-.099 4.176-1.308zm-2.258-2.392 1.17 1.171c-.704.232-1.274.418-1.729.566zm.968-1.154 7.356-7.331 1.347 1.342-7.346 7.347z" fill-rule="nonzero"/></svg>
+										</div>
+									</div>
+								</li>
+								<li class="item">
+									<p><span class="name">Nombre: </span>Sa Lloca loca S.L.</p>
+									<div class="options d-flex justify-content-end align-items-center">
+										<div class="trash" title="borrar">
+											<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M9 19c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5-17v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712zm-3 4v16h-14v-16h-2v18h18v-18h-2z"/></svg>
+										</div>
+										<div class="edit" title="editar">
+											<svg width="30" height="30" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m11.25 6c.398 0 .75.352.75.75 0 .414-.336.75-.75.75-1.505 0-7.75 0-7.75 0v12h17v-8.749c0-.414.336-.75.75-.75s.75.336.75.75v9.249c0 .621-.522 1-1 1h-18c-.48 0-1-.379-1-1v-13c0-.481.38-1 1-1zm1.521 9.689 9.012-9.012c.133-.133.217-.329.217-.532 0-.179-.065-.363-.218-.515l-2.423-2.415c-.143-.143-.333-.215-.522-.215s-.378.072-.523.215l-9.027 8.996c-.442 1.371-1.158 3.586-1.264 3.952-.126.433.198.834.572.834.41 0 .696-.099 4.176-1.308zm-2.258-2.392 1.17 1.171c-.704.232-1.274.418-1.729.566zm.968-1.154 7.356-7.331 1.347 1.342-7.346 7.347z" fill-rule="nonzero"/></svg>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<div class="col-8">
+							<div class="content-item-list row product-features-tabs">
+								<div class="col-12">
+									<div class="barra-opciones d-flex justify-content-sm-between" >
+										<div>
+											<div class="item d-inline-block active tabs1" data-content="item1">
+												Contenido
+											</div>
+											<div class="item d-inline-block tabs1" data-content="item2">
+												Imágenes
+											</div>
+											<div class="item d-inline-block tabs1" data-content="item3">
+												SEO
+											</div>
+										</div>
+										<div class="options d-flex justify-content-end align-items-center">
+											<div class="save" title="guardar"> 
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13 3h2.996v5h-2.996v-5zm11 1v20h-24v-24h20l4 4zm-17 5h10v-7h-10v7zm15-4.171l-2.828-2.829h-.172v9h-14v-9h-3v20h20v-17.171z"/></svg>
+											</div>
+											<div class="clear me-2" title="reset">
+												<svg width="30" height="30" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd"><path d="M19 14.586l3.586-3.586 1.414 1.414-3.586 3.586 3.586 3.586-1.414 1.414-3.586-3.586-3.586 3.586-1.414-1.414 3.586-3.586-3.586-3.586 1.414-1.414 3.586 3.586zm-7 6.414h-12v-2h12v2zm0-4.024h-12v-2h12v2zm0-3.976h-12v-2h12v2zm12-4h-24v-2h24v2zm0-4h-24v-2h24v2z"/></svg>
+											</div>
+										</div>
+									</div>
+									<form action="">
+										<div>
+											<div class="item-content active cont-tabs1" data-content="item1">
+												<label for="name">Nombre</label>
+												<input type="text">
+												<div class="admin-tabs barra-opciones d-flex justify-content-sm-between" >
+													<div>
+														<div class="item d-inline-block tabs2 add-substract" data-content="item1">
+															Español
+														</div>
+														<div class="item d-inline-block tabs2" data-content="item2">
+															Inglés
+														</div>
+														<div class="item d-inline-block tabs2" data-content="item3">
+															Aleman
+														</div>
+													</div>
+												</div>
+												<form action="">
+													<div>
+														<div class="item-content active cont-tabs2"  data-content="item1">
+															Item 4
+														</div>
+														<div class="item-content cont-tabs2" data-content="item2">
+															Item 5
+														</div>
+														<div class="item-content cont-tabs2" data-content="item3">
+															Item 6
+														</div>
+													</div>
+												</form>
+											</div>
+											<div class="item-content cont-tabs1" data-content="item2">
+												Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis illum ut omnis consectetur tempora? Voluptatibus!
+											</div>
+											<div class="item-content cont-tabs1" data-content="item3">
+												Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<!-- FIN footer -->
