--- a/checkout.html
+++ b/checkout.html
@@ -269,6 +269,12 @@
                 </div>
                 <!-- FIN Checkout content -->
 			</main>
+			<div id="notification-wrapper" class="notification-wrapper">
+				<div id="notification" class="notification">
+					<img src="img/sobre.png" alt="">
+					<p id="notification-message"></p>
+				</div>
+			</div>
 			<!-- FIN main -->
 			<!-- Footer -->
 			<footer>
