--- a/admin-panel2.html
+++ b/admin-panel2.html
@@ -248,6 +248,87 @@
 							</ul>
 						</div>
 						<div class="col-8">
+						<div class="col-8">
+						    <!-- HTML del sistema de pestañas -->
+							<div class="tabs">
+								<div class="tabs-header">
+									<div class="tab-button active" data-target="#tab-1">Pestaña 1</div>
+									<div class="tab-button" data-target="#tab-2">Pestaña 2</div>
+									<div class="tab-button" data-target="#tab-3">Pestaña 3</div>
+								</div>
+								<div class="tabs-body">
+									<div id="tab-1" class="tab-content active">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolorum accusamus omnis, ad quisquam officiis. Quasi voluptate distinctio labore, delectus vel numquam sed corporis! Eos suscipit asperiores omnis corrupti quaerat perferendis laudantium qui cumque nemo?</p>
+										<p>Unde blanditiis hic veniam quidem cum rerum, amet incidunt sint maxime, magni, nostrum sit placeat nesciunt optio quos non vero eum natus libero et culpa itaque nemo. Amet enim temporibus, magni atque soluta similique quisquam?</p>
+										<div class="tabs">
+											<div class="tabs-header">
+												<div class="tab-button active" data-target="#tab-1-1">Pestaña 1.1</div>
+												<div class="tab-button" data-target="#tab-1-2">Pestaña 1.2</div>
+												<div class="tab-button" data-target="#tab-1-3">Pestaña 1.3</div>
+											</div>
+											<div class="tabs-body">
+												<div id="tab-1-1" class="tab-content active">
+													Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident non maxime unde soluta eaque, ducimus quo doloribus, itaque iure necessitatibus accusantium impedit ex. Eum sequi impedit modi? Explicabo est magni laudantium impedit quod, hic cum molestiae fugit eius quas quos, harum culpa dignissimos consequatur possimus sapiente adipisci molestias. Odit cum sint quisquam illum officiis, reprehenderit vero dolorem ipsum adipisci commodi sunt quasi tenetur itaque quae ea iste quia earum cumque veritatis. Eos magni qui modi quae labore velit, nulla perspiciatis, repudiandae optio a quibusdam molestiae ducimus aspernatur dolore dolorum iste esse beatae consectetur unde maxime harum quis ex. Dignissimos neque sit aut consequuntur. Maiores, nihil nulla distinctio explicabo harum a fugiat atque nostrum earum laboriosam necessitatibus suscipit voluptatibus ipsa veniam, delectus ad cum expedita, quo blanditiis accusamus. Aliquid optio, totam perferendis nesciunt exercitationem fugit iure sed accusantium. Dicta, dolorem! Eius officia asperiores quo cum soluta quos consequatur voluptas, maxime vitae, labore at laborum corporis? Iusto dolorem eaque, quisquam reiciendis temporibus quasi voluptatibus consequuntur iste, nobis facere vero, hic iure dolor atque sed. Architecto exercitationem, excepturi voluptates distinctio iste quia, aspernatur blanditiis ea quis sequi consectetur. Dolore, atque veniam suscipit sint animi mollitia incidunt nihil cumque. Unde a nostrum aliquam placeat incidunt numquam doloremque. Ipsam nihil aperiam repellat dolore voluptatem officiis vero obcaecati iure tenetur nesciunt, fugiat beatae, natus molestias error atque, vel accusamus! Placeat distinctio veniam corrupti sed sunt fugit excepturi eveniet dignissimos, earum iusto animi amet perferendis at fuga incidunt minus doloribus ut quas blanditiis aspernatur itaque atque. Facilis pariatur voluptatem aut incidunt. Ratione tenetur eum dignissimos quidem, consectetur assumenda ad molestias quod vitae cupiditate dolores? Est, ex fuga explicabo ullam exercitationem maiores dignissimos saepe corrupti officia harum. Maxime optio laborum recusandae omnis itaque deleniti in nulla consequatur odio quis voluptatibus aliquam necessitatibus est facere enim, eligendi voluptatum debitis!
+												</div>
+												<div id="tab-1-2" class="tab-content">
+													Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci nam cum, dolorem sunt numquam delectus, error vel minus, quaerat repellat laudantium dolores non quo dolorum?
+													<div class="tabs">
+														<div class="tabs-header">
+															<div class="tab-button active" data-target="#tab-1-2-1">Pestaña 1.2.1</div>
+															<div class="tab-button" data-target="#tab-1-2-2">Pestaña 1.2.2</div>
+															<div class="tab-button" data-target="#tab-1-2-3">Pestaña 1.2.3</div>
+														</div>
+														<div class="tabs-body">
+															<div id="tab-1-2-1" class="tab-content active">
+																<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore corrupti ratione dignissimos voluptates officia voluptas perspiciatis repellendus amet illum? Ab quaerat rem velit eligendi deleniti quam, natus praesentium deserunt eum!</p>
+																<p>Suscipit facilis illum dicta saepe velit voluptate nisi eius amet id ad dolor, enim consectetur asperiores, officia dolorem obcaecati! Numquam recusandae quod dolores in ea quas explicabo nihil, ducimus qui?</p>
+																<p>Recusandae consectetur voluptas fugiat non excepturi molestiae id sapiente corrupti quam, harum, exercitationem corporis architecto sed, aliquam pariatur sequi ipsum. Et cupiditate deserunt eligendi. Officia vitae ad facere nihil ullam.</p>
+																<p>Sunt molestiae vero inventore atque delectus minima porro incidunt a corrupti cumque aspernatur numquam, at repudiandae soluta placeat molestias asperiores quas architecto. Repellat commodi magni rem sed laboriosam, iste velit.</p>
+															</div>
+															<div id="tab-1-2-2" class="tab-content">
+																<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quos consequatur qui amet quia corrupti ipsam non sapiente sequi autem?</p>
+																<p>Reiciendis quam eos alias reprehenderit in cum modi porro blanditiis expedita nobis unde adipisci, perferendis natus voluptatem illum nam. Natus.</p>
+																<p>Odio sint aspernatur quis unde mollitia quae facilis eligendi, amet dolorem fuga necessitatibus doloribus sed nam quisquam assumenda rem minus?</p>
+																<p>Officiis sit modi, quae nam, dolores mollitia inventore, dolor magni maiores ducimus omnis ipsum! Iusto incidunt facilis nostrum molestiae. Totam.</p>
+																<p>Hic exercitationem veniam neque, porro vero, voluptates maiores officiis cum natus, saepe a inventore necessitatibus! Dicta perspiciatis explicabo ab enim?</p>
+																<p>Quibusdam velit nihil quas blanditiis. Hic consequuntur dolor voluptas quibusdam, soluta modi eos saepe facere atque, alias natus eum iste?</p>
+															</div>
+															<div id="tab-1-2-3" class="tab-content">
+																<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero aspernatur amet aperiam doloremque, ut soluta deserunt maxime, officiis modi esse accusantium pariatur quam. Voluptate, vitae veritatis illum temporibus tempora excepturi repudiandae ullam cupiditate aliquid eaque molestiae exercitationem facere fuga optio sequi odio ratione rerum non modi consectetur animi nihil quos placeat. Labore, consectetur autem? Minus pariatur odit sapiente perspiciatis eveniet doloribus nobis hic dolorem nesciunt suscipit, incidunt sunt natus sequi est ipsa neque non! Ipsam quo ad ratione deleniti voluptate sint, veniam consectetur officia, vel quidem ullam. Iure quia ex ipsum voluptas placeat odio perspiciatis. Laboriosam pariatur fuga vero. Magnam!</p>
+																<p>Quas architecto at magnam eligendi harum, modi nobis repellat accusamus distinctio esse eius tempore sequi aspernatur vero non dolore doloribus culpa possimus sapiente odio molestiae id labore similique ipsa? Excepturi, ducimus rerum harum perferendis dignissimos animi ea unde facere quo aliquam architecto reprehenderit odio nisi quos est magni aperiam deleniti obcaecati. Numquam, vero maiores quis dignissimos sint omnis sunt eos assumenda consequatur? Suscipit, debitis sunt minus iste tenetur dolore? Facilis ipsam eius harum. Quos rem vel ipsa eos exercitationem doloribus ut veniam voluptatum quia vero sunt, voluptas, aut, placeat et quaerat beatae magnam ipsam cumque officia qui nobis! Hic, tenetur?</p>
+																<p>Vero pariatur tempore voluptate quibusdam placeat fugiat. Esse fugit eveniet vel magnam sed neque inventore et repudiandae quia ratione libero nobis temporibus provident a expedita, sint laborum! Beatae accusantium ut nemo illo qui reiciendis expedita quae autem, in quos fugiat provident debitis repudiandae ab repellat unde optio molestiae consectetur placeat enim. Officiis dolores sint fuga. Reprehenderit dolores eaque eos repellendus et sequi perspiciatis excepturi fugit ex accusantium quidem ad quis iste rem at officiis, ullam tempora nulla quibusdam doloribus numquam maxime qui quas. Accusantium alias quasi in magnam qui placeat omnis molestias, voluptatum quidem reiciendis quod necessitatibus beatae distinctio voluptate!</p>
+																<p>Odio aut accusamus cumque sunt veniam dolores pariatur modi earum eos, nisi commodi sit quo error distinctio saepe tempore, rerum at deserunt autem quae quibusdam facere? Assumenda odio eligendi doloribus! Ex quae minus ut dolor iusto accusantium quo excepturi praesentium? Earum aut corrupti, qui, distinctio nobis sequi ducimus, delectus corporis modi excepturi veritatis! Minima beatae at a vero officiis ad. Expedita, ratione nobis. Aut quod non explicabo ducimus ullam, fugiat vero illum omnis eaque iure voluptate expedita, ab fugit? Veniam, facere debitis. Pariatur illo, voluptatem, sint vero ab suscipit quam odio animi autem beatae ut quidem dicta minus quaerat ipsam.</p>
+																<p>Excepturi nam delectus cumque, soluta quia nobis modi recusandae neque explicabo eligendi culpa iusto rem autem ipsum dolore maxime nesciunt, laboriosam vero. Ut itaque officia iure suscipit, quae sapiente perspiciatis aliquid quam nemo accusamus inventore ipsa consequatur numquam tenetur omnis aliquam quisquam totam expedita cumque odio aspernatur consequuntur voluptatem aut explicabo? Molestias, earum inventore natus, impedit soluta temporibus incidunt unde repellendus blanditiis corrupti odit expedita debitis doloribus omnis dolores esse. Tenetur, assumenda eos. Maxime esse molestias eveniet aut, perspiciatis assumenda est vero ducimus impedit in iste officia quas veritatis repudiandae quam suscipit id dolor ipsam voluptatem voluptates cupiditate. In, consequuntur?</p>
+																<p>Sapiente porro laborum voluptates quos possimus! Ipsam iste, deleniti tenetur dolores at earum ipsum atque modi? Et expedita corrupti iste quam suscipit velit id, sequi libero error! Impedit facere minima reprehenderit excepturi cupiditate voluptatibus illo enim id autem eveniet, repudiandae laudantium blanditiis. Delectus a nisi ab architecto error incidunt voluptate suscipit cupiditate deleniti dicta. Commodi repudiandae laudantium eaque, deleniti corporis provident sapiente nobis veritatis corrupti tempore quasi deserunt expedita dignissimos voluptatum quo suscipit voluptates aliquid laboriosam a tempora, excepturi exercitationem ad minus odio. Eos, unde exercitationem atque cupiditate odio repellat saepe, quibusdam rerum distinctio ut ipsam, earum id ratione quis.</p>
+																<p>Vel perspiciatis ut corporis. Distinctio rem fugiat adipisci iste eos sapiente aut quidem culpa dignissimos maiores beatae eligendi unde provident, error eaque laudantium? Doloremque aliquid omnis, corrupti et sit hic perspiciatis delectus molestiae nemo labore recusandae culpa architecto, unde sequi maxime ipsam natus repellat cumque dolorem tempora a? Vitae excepturi aut veniam et expedita quod aliquid quam, qui, consectetur, tempora explicabo veritatis perferendis doloribus natus animi? Inventore quibusdam excepturi cumque impedit nesciunt in aspernatur! Eum vero minus assumenda soluta atque ea quidem, praesentium ad odio. Cupiditate labore voluptatum perspiciatis nihil laudantium, magnam deserunt repudiandae laborum, nostrum corporis debitis, quod saepe!</p>
+																<p>Modi nesciunt animi odio dignissimos ut facilis soluta magnam praesentium, sed aut, libero impedit sapiente deserunt, ullam nihil fugit quidem nulla pariatur culpa maxime eius ipsa voluptatem. Quis illum vitae, similique itaque deserunt, laborum sint, perferendis quisquam voluptatum magnam fugiat sapiente! Aliquid dolorem commodi maiores eveniet quam, ratione assumenda perferendis repellat, in enim magni! Hic cumque voluptate, a dolor consectetur amet, mollitia, delectus minus aliquid nobis pariatur adipisci iure corporis obcaecati cum enim ex dignissimos optio non! Odit repudiandae eaque consectetur harum quod reprehenderit officiis, optio in totam, sequi, cum doloribus? Praesentium quaerat nam nesciunt aperiam ducimus impedit, accusamus incidunt.</p>
+															</div>
+														</div>
+													</div>
+												</div>
+												<div id="tab-1-3" class="tab-content">
+													Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam quisquam quibusdam nemo eaque reiciendis quasi ipsum architecto laboriosam, explicabo molestiae, alias voluptatem. Repellat ut inventore, excepturi aut eaque veniam, nulla nihil a in omnis fuga pariatur praesentium culpa, eligendi cum! Atque totam porro pariatur architecto veniam ex quasi laudantium! Ducimus eaque quia sapiente, magni incidunt voluptas dolores porro. Eos eveniet blanditiis nam expedita fugiat asperiores consequuntur cumque? Optio, a nam!
+												</div>
+											</div>
+										</div>
+									</div>
+									<div id="tab-2" class="tab-content">
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptate non hic officiis cum velit, cupiditate in sunt accusantium rerum tenetur vero laudantium praesentium adipisci tempora quam, quos quibusdam quod amet aspernatur repudiandae corporis sint. Placeat culpa voluptates, ullam, aliquam autem quaerat sit reprehenderit asperiores ab consectetur, eius adipisci qui? Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus esse quia nesciunt accusantium corrupti, autem molestias, beatae dignissimos excepturi odio reprehenderit at, quasi voluptates repellat. Vitae iure tenetur provident qui consequatur deleniti quibusdam, ipsa quis consectetur excepturi fugiat doloremque architecto quia dolore tempore corrupti dolores obcaecati dolor. Cupiditate, velit provident.
+									</div>
+									<div id="tab-3" class="tab-content">
+										<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, delectus impedit. Et nam eligendi ipsum sequi corporis, iure beatae quasi tenetur commodi obcaecati adipisci autem non, accusantium voluptatibus deserunt fugit nesciunt eius nisi nihil? Laboriosam omnis nobis ipsam quia eligendi ex nihil, amet dolore maxime. Dolor quia impedit blanditiis, temporibus quod dignissimos aperiam pariatur mollitia recusandae quisquam deleniti nihil ullam!</p>
+										<p>Reiciendis, a dolor sequi, cum consequuntur, distinctio incidunt id possimus omnis eos provident maxime. Culpa, libero quo enim odit, obcaecati a itaque illum laboriosam atque, quod delectus porro! Pariatur veritatis, odit perspiciatis fugiat id sint! Facere doloribus vero quia debitis accusamus beatae, praesentium quaerat harum veniam sunt neque. Sed, vitae? Praesentium aut voluptatum, natus molestiae corrupti quibusdam commodi in eius.</p>
+										<p>A laudantium voluptatum voluptas quibusdam amet cum. Harum nostrum molestiae ut? Obcaecati consequuntur quae quia nulla laudantium quisquam architecto ex iste praesentium provident nisi autem fuga, vero tenetur fugit temporibus soluta quos, distinctio doloremque repellat recusandae excepturi ut! Amet alias iste, ab, voluptatibus fugiat corporis cum voluptatem, commodi facilis neque vitae unde? Sequi odit labore suscipit quibusdam quos, a consequatur!</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+
+
+
+
 							<div class="content-item-list row product-features-tabs">
 								<div class="col-12">
 									<form action="" class="forms admin-form">
@@ -275,14 +356,34 @@
 											<div class="item-content active cont-tabs1" data-content="item1">
 												<div class="pos-relative">
 													<label for="nombre">Nombre</label>
-													<input id="nombre" type="text" name="name" data-validate="names">
+													<input id="nombre" type="text" data-validate="names">
 													<p class="error-message">Formato incorrecto</p>
-													<label for="email">Email</label>
-													<input id="email" type="text"  name="email" data-validate="emails">
-													<p class="error-message">Formato incorrecto</p>
-													<label for="pass">Password</label>
-													<input id="pass" type="password"  name="password" data-validate="passwords">
-													<p class="error-message">Formato incorrecto</p>
+												</div>
+												
+												<div class="barra-opciones d-flex justify-content-sm-between" >
+													<div>
+														<div class="item d-inline-block tabs2 add-substract active" data-content="item1">
+															Español
+														</div>
+														<div class="item d-inline-block tabs2" data-content="item2">
+															Inglés
+														</div>
+														<div class="item d-inline-block tabs2" data-content="item3">
+															Aleman
+														</div>
+													</div>
+												</div>
+												<div>
+													<div class="item-content active cont-tabs2"  data-content="item1">
+														<label for="name">Titular</label>
+														<input type="text">
+													</div>
+													<div class="item-content cont-tabs2" data-content="item2">
+														Item 5
+													</div>
+													<div class="item-content cont-tabs2" data-content="item3">
+														Item 6
+													</div>
 												</div>
 											</div>
 											<div class="item-content cont-tabs1" data-content="item2">
@@ -291,15 +392,15 @@
 											<div class="item-content cont-tabs1" data-content="item3">
 												Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, nihil officia hic expedita minus perspiciatis suscipit nemo a ea doloremque. Neque doloremque quia soluta enim est eum suscipit eos necessitatibus.
 											</div>
-										</div>
-										<div class="footer">
-											<button id="submitForm" class="save">
-												GUARDAR
-											</button>
-											<button class="reset">
-												RESET
-											</button>
+											<div class="footer">
+												<button id="submitForm" class="save">
+													GUARDAR
+												</button>
+												<button class="reset">
+													RESET
+												</button>
 
+											</div>
 										</div>
 									</form>
 								</div>
