--- a/admin-panel-preguntas.html
+++ b/admin-panel-preguntas.html
@@ -17,8 +17,7 @@
 			<link href="assets/css/admin.css" rel="stylesheet">
 		</head>
 
-										
-
+									
 		<body>
 			<div class="admin-panel">
 				<div class="sidebar-menu">
@@ -250,7 +249,7 @@
 						<div class="col-8">
 							<div class="content-item-list row product-features-tabs">
 								<div class="col-12">
-									<form action="" class="forms admin-form" data-url="http://192.168.1.16:8080/api/admin/taxes">
+									<form action="" class="forms admin-form" action="http://127.0.0.1:8080/api/admin/taxes">
 										<div class="barra-opciones d-flex justify-content-sm-between" >
 											<div>
 												<div class="item d-inline-block active tabs1" data-content="item1">
